--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_PUBLIC_BASEURL=https://skyhopper-backend.onrender.com
+VITE_API_KEY=c7GPgJ00RvkFDZJVksuzKnXpiXPedZMw
+VITE_CLIENT_SECRET=IOCNZskjK8lUr74G
